feat(jedis-compatibility): refactor ACL toLong method and ensure Java 8 compatibility
Signed-off-by: prashanna-frsh <prashanna.rajendran@freshworks.com>